[package]
name = "rolysh"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
nix = { version = "0.27", features = ["process", "signal", "term", "resource"] }
regex = "1"
libc = "0.2"
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "5"
rustyline = "14"
atty = "0.2"
parking_lot = "0.12"
glob = "0.3"

[profile.release]
opt-level = 3
lto = true
