[package]
name = "rolysh"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
nix = { version = "0.27", features = ["process", "signal", "term", "resource"] }
regex = "1"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reedline = {version =  "0.44", features = ["external_printer"] }
tracing-appender = "0.2"
tokio-util = "0.7.18"
const_format = "0.2.35"
memchr = "2.8.0"

[profile.release]
opt-level = 3
lto = true
